<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/goHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home" />

    <TextView
        android:id="@+id/update_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_patient"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/patienthealthcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/patient_cardNum"
        android:ems="10" />

    <EditText
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/temperature"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/systolic_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/systolic_pressure"
        android:inputType="number" />

    <EditText
        android:id="@+id/diastolic_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/diastolic_pressure"
        android:inputType="number" />

    <EditText
        android:id="@+id/heart_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/heart_rate"
        android:inputType="number" />

    <Button
        android:id="@+id/patient_update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update" />

</LinearLayout>
