<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/displayName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nurse_logged_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginLeft="6dip" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        
        <Button android:id="@+id/view_urgency"
            android:text="@string/view_by_urgency"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:layout_marginTop="2dip"
        	android:gravity="center" />
        
        <Button
            android:id="@+id/lookup_patient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lookup_patient" />

        <Button
            android:id="@+id/update_patient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_update" />
        
        <Button android:id="@+id/addPatient_button"
            android:text="@string/nurse_logged_add"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="2dip"
            android:gravity="center" />

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="saveToFile"
            android:text="@string/save" />
        
        <Button
            android:id="@+id/logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:text="@string/logout" />
        
    </LinearLayout>

</LinearLayout>
