<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/goHome"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:text="@string/updatep"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/healthcardNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/patient_cardNum"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/prescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dip"
        android:hint="@string/medication"
        android:inputType="text" />

    <EditText
        android:id="@+id/prescription_exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:ems="10"
        android:hint="@string/prescription_instructions"
        android:inputType="text" />

    <Button
        android:id="@+id/prescribeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/prescribe" />

</LinearLayout>